--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -276,6 +276,7 @@ h6 {
 .swiper-button-prev,
 .swiper-button-next {
   background: white;
+  border: 0.5px solid var(--color-primary);
   border-radius: 100%;
   transform: scale(0.8);
   transition: transform 0.2s ease-in-out;
