--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,18 +12,22 @@
 .view-editor-content .tiptap.ProseMirror {
   all: revert !important;
 }
+
 .view-editor-content .tiptap.ProseMirror .columns {
   @apply max-md:grid max-sm:grid-cols-1 max-md:grid-cols-2;
 }
+
 .view-editor-content .tiptap.ProseMirror .columns .column {
   @apply border-none;
 }
+
 .view-editor-content
-  .tiptap.ProseMirror
-  .task-list-item
-  input[type="checkbox"] {
+.tiptap.ProseMirror
+.task-list-item
+input[type="checkbox"] {
   all: revert;
 }
+
 .view-editor-content table {
   border: none !important;
   border-collapse: collapse;
@@ -257,11 +261,11 @@ h6 {
   /*gradient white transparent white*/
   background: transparent;
   background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 0) 15%,
-    rgba(255, 255, 255, 0) 85%,
-    rgba(255, 255, 255, 1) 100%
+      90deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0) 15%,
+      rgba(255, 255, 255, 0) 85%,
+      rgba(255, 255, 255, 1) 100%
   );
 }
 
@@ -272,6 +276,9 @@ h6 {
 /*.swiper-button-next {*/
 /*  right: 10px !important;*/
 /*}*/
+.swiper-pagination-bullet-active {
+  background: var(--color-primary) !important;
+}
 
 .swiper-button-prev,
 .swiper-button-next {
@@ -555,9 +562,9 @@ h6 {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(
-    180deg,
-    var(--color-primary-muted),
-    var(--color-primary)
+      180deg,
+      var(--color-primary-muted),
+      var(--color-primary)
   );
   /*border-radius: 10px;*/
 }
