Fix styling inconsistencies in `ArticleBigCard` component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ div.no-tailwind p span {
 
 :root {
   /* Primary Colors */
-  --primary: #a97aec;
+  --primary: #A97AEC;
   --primary-light: #ede9fe;
   --primary-muted: #c4b5fd;
   /*--primary-dark: #5B21B6;*/
