--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -605,3 +605,9 @@ h6 {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--color-primary-dark);
 }
+
+@keyframes progress {
+  0% {
+    stroke-dasharray: 0 100;
+  }
+}
