--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -241,9 +241,9 @@ h6 {
 /*h4 {*/
 /*  @apply text-xl lg:text-2xl  font-semibold font-poppins text-primary-dark;*/
 /*}*/
-/*p {*/
-/*  @apply font-outfit text-base text-primary-text;*/
-/*}*/
+p {
+  @apply font-outfit text-base text-primary-text;
+}
 /*.swiper {*/
 /*  width: 100%;*/
 /*  height: 100%;*/
